--- a/public/style.css
+++ b/public/style.css
@@ -17,4 +17,11 @@ html, body {
 
  #movie-container {
      display:none;
+     font-style: italic;
+     color: darkblue;
+     background-color: lightcyan;
+     border: 3px solid darkslateblue;
  }
+
+
+
